Fix navigation bar in nav.css to top of page and give header a margin top to prevent overlap

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
 body > header {
   height: 400px;
   width: 100vw;
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
